<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetails">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/iv_image_poster"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/poster_2" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/action_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_back"/>
        </FrameLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_cover"
            android:layout_width="120dp"
            android:layout_height="220dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_image_poster"
            app:shapeAppearanceOverlay="@style/roundedImageView"
            tools:src="@drawable/cover_9" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_cover"
            app:layout_constraintTop_toTopOf="@+id/iv_cover"
            tools:text="Shawsank Redemption" />

        <TextView
            android:textColor="@color/white"
            android:id="@+id/tv_item_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Action, Drama, Thriller"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_item_actor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:text="Brad Pitt, Michael"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_item_genre"
            app:layout_constraintTop_toBottomOf="@id/tv_item_genre" />

        <TextView
            android:id="@+id/tv_release_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:text="@string/release"
            app:layout_constraintStart_toStartOf="@id/tv_item_actor"
            app:layout_constraintTop_toBottomOf="@id/tv_item_actor" />

        <TextView
            android:id="@+id/tv_item_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="20 October 2024"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintTop_toTopOf="@+id/tv_release_on" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/duration"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/tv_release_on"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_on" />

        <TextView
            android:id="@+id/tv_item_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2h 22m"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintTop_toTopOf="@+id/tv_duration" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rating"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/tv_duration"
            app:layout_constraintTop_toBottomOf="@+id/tv_duration" />

        <TextView
            android:id="@+id/tv_item_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintTop_toTopOf="@+id/tv_rating" />

        <ImageView
            android:id="@+id/action_share"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_share"
            app:layout_constraintEnd_toEndOf="@id/tv_item_rating"
            app:layout_constraintTop_toBottomOf="@id/tv_item_rating"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_item_plot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_cover"
            tools:text="@tools:sample/lorem/random" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
